Refactor: 상휴님께서 조언해주신 부분 리팩토링 1. createPost 메서드 에서 반환하는 객체변환 2. .map에서 객체가 나와서 .toList() 바로쓰기 3. 중복되는 로직이 있으므로 메서드 하나 만들기