@@ -4,6 +4,8 @@ import com.example.springassignmentlv1.dto.PostRequestDto;
 import com.example.springassignmentlv1.dto.PostResponseDto;
 import com.example.springassignmentlv1.entity.Post;
 import jakarta.transaction.Transactional;
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import com.example.springassignmentlv1.repository.PostRepository;
@@ -17,18 +19,17 @@ public class PostService {
     private final PostRepository postRepository;
 
 
-
     public PostResponseDto createPost(PostRequestDto postRequestDto) {
         Post post = new Post(postRequestDto);
-        post = postRepository.save(post);
-        return new PostResponseDto(post);
+        Post savedPost = postRepository.save(post); //이미 할당된 객체는 원래값을 보존하는 방향으로 하기, 새로운 객체생성
+        return new PostResponseDto(savedPost);
     }
 
     public List<PostResponseDto> getPosts() {
         return postRepository.findAllByOrderByModifiedAtDesc()
                 .stream()
                 .map(PostResponseDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PostResponseDto getPost(Long postId) {
@@ -40,23 +41,25 @@ public class PostService {
     @Transactional
     public PostResponseDto updatePost(Long postId, PostRequestDto postRequestDto) {
         Post post = findPost(postId);
-        if (!post.getPassword().equals(postRequestDto.getPassword())) {
-            throw new IllegalArgumentException("비밀번호가 일치하지 않습니다");
-        }
+        validatePassword(post, postRequestDto.getPassword());
         post.update(postRequestDto);
         return new PostResponseDto(post);
     }
 
     public void deletePost(Long postId, PostRequestDto postRequestDto) {
         Post post = findPost(postId);
-        if (!post.getPassword().equals(postRequestDto.getPassword())) {
-            throw new IllegalArgumentException("비밀번호가 일치하지 않습니다");
-        }
+        validatePassword(post, postRequestDto.getPassword());
         postRepository.delete(post);
     }
 
     private Post findPost(Long postId) {
         return postRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 글입니다."));
+    }
+
+    private void validatePassword(Post post, String password) {
+        if (!post.getPassword().equals(password)) {
+            throw new IllegalArgumentException("비밀번호가 일치하지 않습니다");
+        }
     }
 }
